<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_home">முதற்பக்கம்</string>
    <string name="menu_adhigarangal">அதிகாரங்கள்</string>
    <string name="menu_favorites">விருப்பமானவை</string>
    <string name="menu_search">தேடல்</string>
    <string name="menu_alarm">தினம் ஒரு குறள்</string>
    <string name="menu_about">விவரம்</string>


    <string name="app_name">திருக்குறள் </string>
    <string name="kural_result_header">திருக்குறள்கள்</string>
    <string name="action_settings">Settings</string>
    <string name="second_explanation">சாலமன் பாப்பையா உரை</string>
    <string name="first_explanation">மு.வ உரை</string>
    <string name="third_explanation">English</string>
    <string name="app_sub_name">மூலமும் உரையும்</string>
    <string name="ok">பகிர்க</string>
    <string name="cancel">வேண்டாம்</string>
    <string name="action_share">பகிர்க</string>
    <string name="thirukkural_content">திருக்குறள்  உலகப்புகழ் பெற்ற தமிழ் இலக்கியமாகும். இதனை இயற்றியவர் திருவள்ளுவர் என்று அறியப்படுபவர். </string>
    <string name="second_thirukkural_more_content">
        "உலக நாகரிகத்திற்குத் தமிழினத்தின் பங்களிப்புகள் பல. அவற்றுள் இரண்டைக் குறிப்பிட்டுச் சொல்லலாம். ஒன்று, தமிழிசை மற்றொன்று திருக்குறள். தமிழில் மிகச் சில சொற்களில் ஆன கவிதை வடிவம் குறள் வெண்பா ஆகும். மிக விரிந்த உலகச் சிந்தனைகளை மிகக் குறுகிய வடிவத்தில் தர முடியும் என்பதை உலக இலக்கிய அரங்கில் முதலில் வள்ளுவரே செய்து காட்டினார் எனலாம். சின்னக் குழந்தையின் சிரிப்பு முதல் 'மெய்யுணர்தல்' வரை வள்ளுவர் மண்ணுக்கும் விண்ணுக்குமான சிந்தனைகளைத் தம் அளவிற்சிறிய நூலில் பொதிந்து வைத்துள்ளார்.\n\n"
"வள்ளுவரது காலம் பல்வேறு அறிஞர்களால் கி.மு. முதல் நூற்றாண்டில் இருந்து கி.பி. இரண்டாம் நூற்றாண்டு வரை அறுதியிடப்படுகிறது. இலக்கிய வரலாற்று நோக்கில் பார்ப்பதானால், சங்க இலக்கியங்கள் பெரும்பாலானவற்றுக்குத் திருக்குறள் காலத்தால் பிற்பட்டது; சிலப்பதிகாரத்துக்கு முற்பட்டது.\n\n"

"இளங்கோவும், கம்பரும் ஆக்கியளித்த பேரியலக்கியங்களில் \'தமிழ்\' என்ற அடையாளத்துக்குள்ளேயே அவர்களது முகம் தெரியும். வள்ளுவத்தை மட்டும் \'உலகப் பொதுமறை\' என்கின்றோம். காரணம் என்ன? தமிழ் மொழியில் அமைந்தது என்பதைத் தவிர, இனம், நாடு குறித்த வெளிப்படையான தன்னடையாளம் எதையும் வள்ளுவர் தம் நூலில் கூற முற்படவில்லை. தமிழ், தமிழ்நாடு, வஞ்சி, மதுரை, பாண்டியர், சோழர் ஆகிய அடையாளம் காட்டும் எந்தச் சொல்லும் திருக்குறளில் காணப்படவில்லை. வள்ளுவரின் சமகாலத்தில், ஏன், அவருக்குப் பின்னரும் கூட, இந்தியத் துணைக் கண்டத்தில் இலக்கியங்களின் வழி அறம் பேச வந்தவர்கள் சாதி, சமயம், நிலப்பகுதி ஆகிய அடையாளங்களைத் தாண்டிச் செல்ல இயலவில்லை வள்ளுவர் மனிதப் பொது அறம் பேசியவர். அவரது இயற்பெயர் கூட நம்மால் அறியப்பெறவில்லை வள்ளுவர் என்பது ஒரு குடிப்பெயராகும்.\n\n"

"\'இன்பத்துப் பாலை\'க் கொண்டும் \'மக்கட்பேறு\' அதிகாரத்தைக் கொண்டும் அவர் மணமானவர், மழலை இன்பம் துய்த்தவர் என்பதை அறிய முடிகிறது.\n\n"

"\'நேற்று வந்த பசி இன்றும் வந்துவிடுமோ\', (குறள் எண் 1048) என்று அஞ்சுகிற இடத்திலும் \'நெருப்பிலே தூங்கலாம். பசியிலே தூங்க முடியாது\' என்ற தன்னிரக்கம் காட்டும் இடத்திலும் வறுமையோடு போராடிய வள்ளுவரின் தனி வாழ்க்கையினை நாம் உய்த்து உணரலாம். இவையன்றி, திருக்குறளிலிருந்து அந்த மானுடப் பெருமலையின் எந்தப் பக்கத்தையும் நம்மால் அறிய முடியவில்லை.\n\n"

"இனி, வள்ளுவரின் காலத்தில், தமிழ்நாட்டில் செல்வாக்குப் பெற்றிருந்த அல்லது தமிழ்ச் சமூகத்தை இயக்கிக் கொண்டிருந்த கருத்தியல்களை நோக்கலாம். தமிழகத்தில் புகுந்த வைதீகப் பார்ப்பனர்கள் தமிழ்நாட்டு அரசு அதிகாரத்திற்கு அருகில் அமர்ந்துள்ளனர். "ஏற்ற பார்ப்பார்க்கு ஈர்ங்கை நிறையப் பூவும் பொன்னும் புனல் படச் சொரிந்த" தமிழ் மன்னர்கள் இருந்திருக்கிறார்கள். மறு புறமாக, வைதீகத்திற்கு எதிராகக் கிளர்ந்தெழுந்த சமண, பௌத்த மதங்கள் தமிழ் நாட்டில் தங்கள் செல்வாக்கைப் பரப்பத் தொடங்கியிருந்தன. வள்ளுவர் வைதீகத்திற்கு எதிராகக் குரலெழுப்பியவர், 'பிறப்பு வழி வேற்றுமையே', வைதீகக் கொள்கையின் உயிர்நாடி. இந்தக் கொள்கை அதிகாரத்திற்கு நெருக்கமாக இருந்த பொழுது 'பிறப்பொக்கும் எல்லாவுயிர்க்கும்' என்ற வள்ளுவரின் குரல் கலகக் குரல்தானே. அதுபோல \'அந்தணர்\' என்ற சொல்லைப் பார்ப்பனர்கள் தமக்கு வழங்கிய காலத்தில், வள்ளுவர் அச்சொல்லுக்கு 'அந்தணர் என்போர் அறவோர்' என்ற எதிர்மறை வரைவிலக்கணம் தர முற்படுகின்றார்.\n\n"
    </string>
    <string name="second_thirukkural_content">
        "உலக நாகரிகத்திற்குத் தமிழினத்தின் பங்களிப்புகள் பல. அவற்றுள் இரண்டைக் குறிப்பிட்டுச் சொல்லலாம். ஒன்று, தமிழிசை மற்றொன்று திருக்குறள். தமிழில் மிகச் சில சொற்களில் ஆன கவிதை வடிவம் குறள் வெண்பா ஆகும்"
    </string>
    <string name="see_more">மேலும்</string>
    <string name="thirukkural_second">திருக்குறளின் பெருமைகள் </string>
    <string name="favorite_kural_add">பிடித்த குறள் சேர்க்கப்பட்டது</string>
    <string name="favorite_kural_remove">பிடித்த குறள் நீக்கப்பட்டது</string>
    <string name="favorite_add">பிடித்த அதிகாரம் சேர்க்கப்பட்டது</string>
    <string name="favorite_remove">பிடித்த அதிகாரம் நீக்கப்பட்டது</string>
    <string name="kural_info">"இறைவன் மனிதனுக்குச் சொன்னது கீதை\n"
                            "மனிதன் இறைவனுக்குச் சொன்னது திருவாசகம்\n"
                            "மனிதன் மனிதனுக்குச் சொன்னது திருக்குறள்"</string>

    <string name="kural_info_one">"திருக்குறள் அடிப்படையில் ஒரு வாழ்வியல் நூல். மனித வாழ்வின் முக்கிய அங்கங் களாகிய அறம் அல்லது தர்மம், பொருள், இன்பம் அல்லது காமம் ஆகியவற்றைப் பற்றி விளக்கும் நூல்."</string>
    <string name="kural_info_two">"பாடல்கள் அனைத்துமே குறள் வெண்பா என்னும் வெண்பா வகையைச் சேர்ந்தவை. இவ்வகை வெண்பாக்களால் ஆகிய அக்காலத்திய முதல் நூலும் ஒரே நூலும் இதுதான்.\n"
    "குறள் வெண்பாக்களால் ஆனமையால் \'குறள்\' என்றும் \"திருக்குறள்\" என்றும் இது பெயர் பெற்றது."</string>
    <string name="kural_info_three">"உலகிலேயே அதிக மொழிகளில் மொழிபெயர்க்கப்பட்டுள்ள நூல்களில் மூன்றாம் இடத்தைத் திருக்குறள் வகிக்கிறது. இதுவரை 80 மொழிகளில் மொழி பெயர்க்கப்பட்டுள்ளது. "</string>
    <string name="kural_info_four">"திருவள்ளுவரை நாயனார், தேவர், தெய்வப்புலவர், பெருநாவலர், பொய்யில் புலவர் என்றும் சில சிறப்புப்பெயர்களால் அழைப்பர். "</string>

    <string name="thirukkural_more_content_one">
    "திருக்குறள் (Thirukkural) உலகப்புகழ் பெற்ற தமிழ் இலக்கியமாகும். இதனை இயற்றியவர் திருவள்ளுவர் என்று அறியப்படுபவர். \n\n"
"இதில் 1330 குறள்கள் பத்து பத்தாக 133 அதிகாரங்களின் கீழ் தொகுக்கப் பெற்றுள்ளன. திருக்குறள் சங்க இலக்கிய வகைப்பாட்டில் பதினெண்கீழ்க்கணக்கு எனப்படும் பதினெட்டு நூல்களின் திரட்டில் இருக்கிறது. \n\n"
"இது அடிப்படையில் ஒரு வாழ்வியல் நூல். மாந்தர்கள் தம் அகவாழ்விலும் சுமுகமாக கூடி வாழவும், புற வாழ்விலும் இன்பமுடனும் இசைவுடனும் நலமுடனும் வாழவும் தேவையான அடிப்படைப் பண்புகளை விளக்குகிறது.\n\n"
"இந்நூல் அறம், பொருள், இன்பம் அல்லது காமம் என்னும் முப்பெரும் பிரிவுகளாய் (முப்பால்) பிரித்தும் அழகுடன் இணைத்தும் கோர்த்தும் விளக்குகிறது."
    </string>
    <string name="thirukkural_more_content_two">
        "திரு மு.வரததாசனார்\n"
        "திரு சாலமன் பாப்பையா\n"
    </string>
    <string name="thirukkural_more_title_one">முன்னுரை</string>
    <string name="thirukkural_more_title_two">தமிழ் உரை எழுதியவர்கள்</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="anand">ஆனந்த் ஜெயபால்</string>
    <string name="anand_sub">உருவாக்கியவர்</string>
    <string name="gmail_sub">மின் அஞ்சல்</string>
    <string name="gmail">janand1991@gmail.com</string>
    <string name="insta_sub">படவரி</string>
    <string name="insta">anand_jeyapal</string>

    <string name="menu_1">முதற்பக்கம்</string>
    <string name="menu_2">அதிகாரங்கள்</string>
    <string name="menu_3">விருப்பமானவை</string>
    <string name="menu_4">தினம் ஒரு குறள்</string>
    <string name="menu_5">விவரம்</string>
    <string name="kurals">குறள்கள்</string>
    <string name="adhigaram">அதிகாரங்கள்</string>
    <string name="front_page">Front Page</string>

    <string name="aram">அறம்</string>
    <string name="porul">பொருள்</string>
    <string name="inbam">இன்பம்</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_string">உலகத்தில் ஏழு \n அதிசயங்கள் உள்ளது \n என்று சொல்கிறார்கள்...\n\n எனக்கு ஒரே அதிசயம் \n என் தமிழ் மொழி \n மட்டுமே...\n</string>


    <string-array name="share_options">
        <item>@string/first_explanation</item>
        <item>@string/second_explanation</item>
        <item>@string/third_explanation</item>
    </string-array>

    <string name="share_dlg_title">உரை தேர்வு</string>
</resources>

