<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_adhigarangal"
            android:icon="@drawable/ic_events"
            android:title="@string/menu_adhigarangal" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_about" />
    </group>
</menu>