<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:elevation="12dp"
        app:cardCornerRadius="54dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">
        <ImageView
            android:layout_height="108dp"
            android:layout_width="match_parent"
            android:id="@+id/imageView1"
            android:src="@drawable/profile"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="2dp"
        android:text="@string/anand"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:text="@string/anand_sub"
        android:textColor="@color/secondary_text"
        android:textSize="14sp" />

    <include layout="@layout/separator_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="2dp"
                android:text="@string/gmail"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/gmail_sub"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:src="@drawable/gmail" />
    </LinearLayout>

    <include layout="@layout/separator_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="2dp"
                android:text="@string/insta"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/insta_sub"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:src="@drawable/insta" />
    </LinearLayout>

    <include layout="@layout/separator_horizontal" />

    <com.work.thirukkural.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_string"
        android:paddingTop="12dp"
        android:textColor="@color/ColorPrimaryDark"
        android:textSize="18sp"
        android:textAlignment="center" />


</LinearLayout>