<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginBottom="4dp"
    android:elevation="4dp"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thirukkural_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:transitionName="thirukkural"
            android:background="@drawable/valluvar"/>

        <com.work.thirukkural.view.CustomTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingBottom="10dp"
            android:paddingTop="16dp"
            android:text="@string/app_name"
            android:includeFontPadding="false"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.work.thirukkural.view.CustomTextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:includeFontPadding="false"
            android:text="@string/thirukkural_content"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/share_about_thirukkural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_share"
                android:textAllCaps="true"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/ColorText"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/ColorText"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>